Sonification: Fix jumpy shared tooltip.

--- a/samples/highcharts/sonification/chart-simultaneous/demo.css
+++ b/samples/highcharts/sonification/chart-simultaneous/demo.css
@@ -1,4 +1,4 @@
 #container {
-    max-width: 700px;
+    max-width: 900px;
     margin: auto;
 }
